--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -34,8 +34,6 @@
 
 .sidebar-footer {
   margin: 10px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
 }
 
 
@@ -287,17 +285,18 @@ strong {
 }
 
 .finish-button {
-  width: 100%; /* Make the button full-width */
-  padding: 10px; /* Add some padding to the button */
-  font-size: 1.2em; /* Increase the font size of the button text */
-  font-weight: bold; /* Make the button text bold */
-  color: #fff; /* Set the button text color to white */
-  background-color: #FF7A00; /* Set the button background color to orange */
-  border: none; /* Remove the button border */
-  border-radius: 5px; /* Add a rounded corner to the button */
-  cursor: pointer; /* Change the cursor to a pointer on hover */
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #FF7A00 !important;
+  background-color: #11113D !important;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .finish-button:hover {
-  background-color: #FF9900; /* Change the button background color on hover */
+  background-color: #FF7A00 !important;
+  color: white !important;
 }
