--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -52,6 +52,9 @@
       </ul>
     </div>
     <div class="sidebar-footer">
+      <button mat-raised-button class="edit-button" (click)="onEditWorkCall()">
+        Editar Obra
+      </button>
       <button mat-raised-button class="finish-button" (click)="finishWorkCall()">
         Terminar Obra
       </button>
