--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -39,6 +39,11 @@
           routerLinkActive="side-option-active"
           routerLink="pending-users">Utilizadores Pendentes
         </button>
+        <button
+          class="side-option-button"
+          routerLinkActive="side-option-active"
+          routerLink="verifications">Obras Pendentes
+        </button>
       </mat-drawer>
       <mat-drawer #drawerProfile class="profile-drawer" mode="over" position="end">
         <div class="profile-content">
