--- a/code/js/front-end/src/app/work-verifications/work-verifications.component.css
+++ b/code/js/front-end/src/app/work-verifications/work-verifications.component.css
@@ -42,3 +42,21 @@ input {
     width: 70%;
   }
 }
+
+.accept-button {
+  color: #4CAF50;
+}
+
+.refuse-button {
+  color: #f44336;
+}
+
+.accept-button:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.refuse-button:hover {
+  background-color: #f44336;
+  color: white;
+}
