--- a/code/js/front-end/src/app/work-verifications/work-verifications.component.html
+++ b/code/js/front-end/src/app/work-verifications/work-verifications.component.html
@@ -10,9 +10,17 @@
 <mat-divider></mat-divider>
 <div>
   <mat-list *ngFor="let entry of filteredVerifications">
-    <mat-list-item (click)="onVerificationClick(entry.workId)">
-      <div matListItemTitle>{{ entry.workTitle }}</div>
-      <div matListItemLine>{{ entry.admin }} pediu autorização à câmara para a obra {{entry.workTitle}}</div>
+    <mat-list-item>
+      <div matListItemTitle>{{ entry.name }}</div>
+      <div matListItemLine>{{ entry.owner }} pediu autorização à câmara para a obra {{entry.name}}</div>
+      <div matListItemMeta>
+        <button mat-icon-button class="accept-button" (click)="onAccept(entry.id)">
+          <mat-icon>check</mat-icon>
+        </button>
+        <button mat-icon-button class="refuse-button" (click)="onDecline(entry.id)">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
     </mat-list-item>
     <mat-divider></mat-divider>
   </mat-list>
