--- a/code/js/front-end/src/app/sign-up/sign-up.component.html
+++ b/code/js/front-end/src/app/sign-up/sign-up.component.html
@@ -116,7 +116,7 @@
       </div>
     </form>
     <div>
-      <p class="text">Já tens conta? <a routerLink="/login">Inicia sessão aqui.</a></p>
+      <p class="text">Já tens conta? <a (click)="onLoginClick()">Inicia sessão aqui.</a></p>
     </div>
   </div>
 </div>
