--- a/code/js/front-end/src/app/app.component.css
+++ b/code/js/front-end/src/app/app.component.css
@@ -10,6 +10,7 @@
   justify-content: space-between; /* Align items on the toolbar */
   background-color: #11113D;
   color: #FF7A00;
+  height: 7%;
 }
 
 .top-bar a {
