--- a/code/js/front-end/src/app/login/login.component.html
+++ b/code/js/front-end/src/app/login/login.component.html
@@ -28,7 +28,7 @@
       </div>
     </form>
     <div>
-      <p class="text">Não tens conta? <a routerLink="/signup">Regista-te aqui.</a></p>
+      <p class="text">Não tens conta? <a (click)="onSignUpClick()">Regista-te aqui.</a></p>
     </div>
   </div>
 </div>
