--- a/code/js/front-end/src/app/list-users/list-users.component.html
+++ b/code/js/front-end/src/app/list-users/list-users.component.html
@@ -12,7 +12,7 @@
 <div>
   <mat-list *ngFor="let item of filteredUsersList">
     <mat-list-item>
-      <div matListItemTitle style="font-weight: bold" (click)="onUserClick(item.id)">{{ item.username }} - {{item.firstName}} {{item.lastName}}</div>
+      <div matListItemTitle style="font-weight: bold" (click)="onUserClick(item.username, item.id)">{{ item.username }} - {{item.firstName}} {{item.lastName}}</div>
       <div matListItemLine style="font-weight: bold">Email: {{item.email}} | NIF: {{ item.nif }} | Association: {{ item.association.name }} - {{ item.association.number }}</div>
     </mat-list-item>
     <mat-divider></mat-divider>
