--- a/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
+++ b/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
@@ -1,9 +1,71 @@
-<div>
+<!--<div class="header">
   <button (click)="onBackCall()" class="small-button">
     <mat-icon class="small-icon">arrow_back</mat-icon>
   </button>
-  <h2>Ocorrência</h2>
+  <h2>Registo</h2>
 </div>
+<div class="container">
+  <h1 *ngIf="log">{{log.title}}</h1>
+  <table *ngIf="log">
+    <colgroup>
+      <col span="1" style="width: 25%;">
+      <col span="1" style="width: 25%;">
+      <col span="1" style="width: 25%;">
+      <col span="1" style="width: 25%;">
+    </colgroup>
+    <tr>
+      <th>Nome</th>
+      <th>Comentário</th>
+      <th>Data de Criação</th>
+      <th>Data de Alteração</th>
+    </tr>
+    <tr>
+      <td>{{log.author.name}}</td>
+      <td>{{log.content}}</td>
+      <td>{{log.createdAt}}</td>
+      <td>{{log.modifiedAt}}</td>
+    </tr>
+  </table>
+  <h3>Ficheiros</h3>
+  <div class="table-container">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()"
+                        [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)"
+                        [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name</th>
+        <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Tipo</th>
+        <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+          (click)="selection.toggle(row)">
+      </tr>
+    </table>
+  </div>
+  <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
+  <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
+</div>
+
 
 <div class="content">
   <div class="left-section">
@@ -20,7 +82,6 @@
     <h3>Ficheiros</h3>
     <div class="table-container">
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- Checkbox Column -->
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>
             <mat-checkbox (change)="$event ? toggleAllRows() : null"
@@ -38,13 +99,11 @@
           </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Name</th>
           <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
         </ng-container>
 
-        <!-- Type Column -->
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef>Tipo</th>
           <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
@@ -59,9 +118,70 @@
     <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
     <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
   </div>
+</div>-->
+
+
+<div class="container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
+  </div>
+  <div class="content" *ngIf="log">
+    <h1 class="title">{{ log.title }}</h1>
+    <div class="author">Autor: {{ log.author.name }}</div>
+
+    <div class="dates">
+      <div>Data de Criação: {{ log.createdAt }}</div>
+      <div>Data de Alteração: {{ log.modifiedAt }}</div>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="description">
+      <h2>Descrição</h2>
+      <p>{{ log.content }}</p>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="files">
+      <h2>Ficheiros</h2>
+      <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
+      <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()"
+                          [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name</th>
+          <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Tipo</th>
+          <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="selection.toggle(row)">
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
-
-
 
 
 
