--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -34,7 +34,7 @@
             </span>
               </div>
               <div class="sidebar-menu-text">
-                Registos de Ocorrências
+                Registos
                 <span class="sidebar-menu-badge">{{ work?.log?.length }}</span>
               </div>
             </a>
