--- a/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
+++ b/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
@@ -1,126 +1,3 @@
-<!--<div class="header">
-  <button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-  </button>
-  <h2>Registo</h2>
-</div>
-<div class="container">
-  <h1 *ngIf="log">{{log.title}}</h1>
-  <table *ngIf="log">
-    <colgroup>
-      <col span="1" style="width: 25%;">
-      <col span="1" style="width: 25%;">
-      <col span="1" style="width: 25%;">
-      <col span="1" style="width: 25%;">
-    </colgroup>
-    <tr>
-      <th>Nome</th>
-      <th>Comentário</th>
-      <th>Data de Criação</th>
-      <th>Data de Alteração</th>
-    </tr>
-    <tr>
-      <td>{{log.author.name}}</td>
-      <td>{{log.content}}</td>
-      <td>{{log.createdAt}}</td>
-      <td>{{log.modifiedAt}}</td>
-    </tr>
-  </table>
-  <h3>Ficheiros</h3>
-  <div class="table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()"
-                        [aria-label]="checkboxLabel()">
-          </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()"
-                        (change)="$event ? selection.toggle(row) : null"
-                        [checked]="selection.isSelected(row)"
-                        [aria-label]="checkboxLabel(row)">
-          </mat-checkbox>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name</th>
-        <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef>Tipo</th>
-        <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-          (click)="selection.toggle(row)">
-      </tr>
-    </table>
-  </div>
-  <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
-  <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
-</div>
-
-
-<div class="content">
-  <div class="left-section">
-    <p>Autor: {{ log?.author?.name }}</p>
-    <p>Title: {{ log?.title }}  | Estado: {{ log?.editable }}</p>
-    <p>Observação: {{ log?.content }}</p>
-    <p>Criado no dia: {{ log?.createdAt }}</p>
-    <p *ngIf="log?.modifiedAt">Modificado no dia: {{ log?.modifiedAt }}</p>
-    <button *ngIf="isEditable()" (click)="editCall()">Editar Log</button>
-    <br>
-  </div>
-
-  <div class="right-section">
-    <h3>Ficheiros</h3>
-    <div class="table-container">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                          [checked]="selection.hasValue() && isAllSelected()"
-                          [indeterminate]="selection.hasValue() && !isAllSelected()"
-                          [aria-label]="checkboxLabel()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox (click)="$event.stopPropagation()"
-                          (change)="$event ? selection.toggle(row) : null"
-                          [checked]="selection.isSelected(row)"
-                          [aria-label]="checkboxLabel(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name</th>
-          <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Tipo</th>
-          <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-            (click)="selection.toggle(row)">
-        </tr>
-      </table>
-    </div>
-    <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
-    <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
-  </div>
-</div>-->
-
-
 <div class="container">
   <div class="header">
     <button mat-button (click)="onBackCall()" class="small-button">
@@ -129,27 +6,38 @@
     </button>
   </div>
   <div class="content" *ngIf="log">
-    <h1 class="title">{{ log.title }}</h1>
+    <h1 *ngIf="!editTitle" class="title">{{ log.title }}
+      <mat-icon *ngIf="isEditable() && !editTitle" (click)="toggleEditTitle()">edit</mat-icon>
+    </h1>
+    <textarea *ngIf="editTitle" id="newTitle" name="newTitle" [(ngModel)]="newTitle" (ngModelChange)="onChangeValues($event, 'Title')"></textarea>
+    <button *ngIf="editTitle" (click)="onEditLogCall('Title')">Submit</button>
+    <button *ngIf="editTitle" (click)="toggleEditTitle(true)">Cancelar</button>
     <div class="author">Autor: {{ log.author.name }}</div>
-
     <div class="dates">
       <div>Data de Criação: {{ log.createdAt }}</div>
       <div>Data de Alteração: {{ log.modifiedAt }}</div>
     </div>
     <mat-divider></mat-divider>
     <div class="description">
-      <h2>Descrição</h2>
-      <p>{{ log.content }}</p>
+      <h2>Descrição
+        <mat-icon *ngIf="isEditable() && !editDescription" (click)="toggleEditDescription()">edit</mat-icon>
+      </h2>
+      <p *ngIf="!editDescription">{{ log.content }}</p>
+      <textarea *ngIf="editDescription" id="newContent" name="newContent" [(ngModel)]="newContent" (ngModelChange)="onChangeValues($event, 'Content')"></textarea>
+      <button *ngIf="editDescription" (click)="onEditLogCall('Content')">Submit</button>
+      <button *ngIf="editDescription" (click)="toggleEditDescription(true)">Cancelar</button>
     </div>
     <mat-divider></mat-divider>
     <div class="files">
       <h2>Ficheiros</h2>
-      <button [disabled]="selection.isEmpty()" (click)="downloadFiles()">Download Log Files</button>
-      <button [disabled]="selection.isEmpty()" (click)="deleteFiles()">Delete Log Files</button>
+      <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
+      <button type="button" class="add-button" (click)="openFileInput()">Adicionar Ficheiro</button>
+      <button *ngIf="!selection.isEmpty()" (click)="downloadFiles()">Transferir ficheiros</button>
+      <button *ngIf="!selection.isEmpty() && isEditable()" (click)="deleteFiles()">Apagar Ficheiros</button>
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? toggleAllRows() : null"
+            <mat-checkbox *ngIf="log && log.files.length > 1" (change)="$event ? toggleAllRows() : null"
                           [checked]="selection.hasValue() && isAllSelected()"
                           [indeterminate]="selection.hasValue() && !isAllSelected()"
                           [aria-label]="checkboxLabel()">
@@ -169,9 +57,9 @@
           <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Tipo</th>
-          <td mat-cell *matCellDef="let element"> {{ element.contentType }}</td>
+        <ng-container matColumnDef="uploadDate">
+          <th mat-header-cell *matHeaderCellDef>Data de Carregamento</th>
+          <td mat-cell *matCellDef="let element"> {{ element.uploadDate }}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -179,6 +67,7 @@
             (click)="selection.toggle(row)">
         </tr>
       </table>
+      <div style="height: 20px;"></div>
     </div>
   </div>
 </div>
