--- a/code/js/front-end/src/app/pending-users/pending-users.component.css
+++ b/code/js/front-end/src/app/pending-users/pending-users.component.css
@@ -2,19 +2,17 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  height: 7%;
 }
 
 .small-button {
-  width: 2%;
-  height: auto;
-  margin: 10px;
-  background-color: transparent;
-  border: none;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
 .small-icon {
-  font-size: 200%;
+  font-size: 30px;
+  margin-right: 5px;
 }
 
 input[type="text"] {
