--- a/code/js/front-end/src/app/pending-users/pending-users.component.html
+++ b/code/js/front-end/src/app/pending-users/pending-users.component.html
@@ -1,6 +1,7 @@
 <div class="header">
-  <button (click)="onBackCall()" class="small-button">
+  <button mat-button (click)="onBackCall()" class="small-button">
     <mat-icon class="small-icon">arrow_back</mat-icon>
+    Voltar
   </button>
   <h2 class="title">Pedidos pendentes para funcionários da Câmara Municipal</h2>
 </div>
