--- a/code/js/front-end/src/app/work-listings/work-listings.component.css
+++ b/code/js/front-end/src/app/work-listings/work-listings.component.css
@@ -1,4 +1,3 @@
-
 .card {
   background-color: #11113D;
   color: white;
@@ -6,7 +5,7 @@
   height: 300px;
 }
 
-.card mat-card-subtitle{
+.card mat-card-subtitle {
   font-size: 16px;
   color: #FF7A00;
 }
@@ -18,6 +17,8 @@
 .card mat-card-title {
   font-size: 30px;
   color: #FF7A00;
+  display: flex;
+  align-items: center; /* Alinha verticalmente os itens */
 }
 
 .card p {
@@ -37,17 +38,22 @@
   color: white;
 }
 
-.card span{
+.card span {
   font-size: 14px;
   margin-left: 10px;
-  width: auto;
+  display: flex;
+  align-items: center; /* Alinha verticalmente os ícones */
 }
 
-.card mat-icon{
-  height: auto;
-  width: 5%;
+.card mat-icon {
+  height: 24px; /* Tamanho padrão do ícone */
+  width: 24px; /* Tamanho padrão do ícone */
 }
 
-.card div{
+.card div {
   padding-right: 10px;
+}
+
+.accepted {
+  color: green;
 }
